tests/import/rename_faulty.sy
use _constants as 1
use _constants as {}
use _constants as +
start :: fn {}
// error: @1
// error: @2
// error: @3
